Add limit for report name component length
Added limit for report name length, parametrized with
max-report-name-length option, because we cannot
remove reports with too long report name.

Tested:
- Confirmed that report with name length equal to 4096
  cannot be generated via bmcweb (POST
  redfish/v1/TelemetryService/MetricReportDefinitions
  fails with code 500)
- Confirmed that report with name length equal to 4095
  can be generated and removed via bmcweb
- Added unit-test that test that report with component
  name length equal to max-report-name-length + 1 cannot
  be generated
- Added unit-test that test that report with component
  name length equal to max-report-name-length can
  be generated

Change-Id: I6868320f831079af903f3624d1beff648059e351
Signed-off-by: Karol Niczyj <karol.niczyj@intel.com>

--- a/meson.build
+++ b/meson.build
@@ -65,6 +65,8 @@ add_project_arguments(
         get_option('max-reading-parameters').to_string(),
     '-DTELEMETRY_MIN_INTERVAL=' + get_option('min-interval').to_string(),
     '-DTELEMETRY_MAX_TRIGGERS=' + get_option('max-triggers').to_string(),
+    '-DTELEMETRY_MAX_REPORT_NAME_LENGTH=' +
+        get_option('max-report-name-length').to_string(),
     language: 'cpp'
 )
 
