Add meson generated files to .gitignore
Meson is now generating subproject dependencies .wrap files inside
'subprojects' directory. As this directory contains non-generated
.wrap files, .gitignore could no longer specify * rule for them.

Tested:
- Git is not detecting new files after clean local build.

Change-Id: Ifb8d72aae2c19671b331ddaaf3960384a8700431
Signed-off-by: Szymon Dompke <szymon.dompke@intel.com>

--- a/.gitignore
+++ b/.gitignore
@@ -112,7 +112,10 @@ fabric.properties
 ### Meson ###
 # subproject directories
 /subprojects/*
-!/subprojects/*.wrap
+!/subprojects/googletest.wrap
+!/subprojects/nlohmann.wrap
+!/subprojects/phosphor-logging.wrap
+!/subprojects/sdbusplus.wrap
 
 # Meson Directories
 meson-logs
