--- a/tests/meson.build
+++ b/tests/meson.build
@@ -55,7 +55,8 @@ test(
             phosphor_logging,
             sdbusplus,
         ],
-        include_directories: ['../src', 'src']
+        include_directories: ['../src', 'src'],
+        cpp_args: '-fno-lto'
     ),
     timeout: 120,
 )
