Extending meson build system to support fast compilation during development stage
Tested compilation against 3 build configurations
- with lto for src and tests/src (for release sw):
  all: ~3 min; change in cpp file: ~2 min
- with lto for src and no_lto for tests/src (for release sw):
  all: ~2 min; change in cpp file:~ 40 sec
- after using scripts/configure_fast_compilation.sh (for development only):
  all: ~1.75 min; change in cpp file: ~20 sec

Signed-off-by: Lukasz Kazmierczak <lukasz.kazmierczak@intel.com>
Change-Id: Idf435d8455260d2d988cb7286d71401f21fd03e2

--- a/tests/meson.build
+++ b/tests/meson.build
@@ -56,7 +56,8 @@ test(
             phosphor_logging,
             sdbusplus,
         ],
-        include_directories: ['../src', 'src']
+        include_directories: ['../src', 'src'],
+        cpp_args: '-fno-lto'
     ),
     timeout: 120,
 )
