POC: MetricDefinition schema implementation
As a proof of concept MetricDefinition schema was implemented in
telemetry service which allowed to speed up GET requests on
MetricDefinitions.

Test scenario which performs:
GET /redfish/v1/TelemetryService/MetricDefinitions
GET on every @odata.id in Members collection

Test scenario executed 80% faster when implemented in telemetry service.

Tested:
  - Get requests on MetricDefinitions correct results

Signed-off-by: Krzysztof Grobelny <krzysztof.grobelny@intel.com>
Change-Id: Ic73e084ce628b9ed9f6f1129170fe388cccf5937

--- a/meson.build
+++ b/meson.build
@@ -80,6 +80,7 @@ executable(
         'src/discrete_threshold.cpp',
         'src/main.cpp',
         'src/metric.cpp',
+        'src/metric_definition_manager.cpp',
         'src/numeric_threshold.cpp',
         'src/on_change_threshold.cpp',
         'src/persistent_json_storage.cpp',
