--- a/tests/meson.build
+++ b/tests/meson.build
@@ -14,6 +14,7 @@ test(
             '../src/details/collection_function.cpp',
             '../src/discrete_threshold.cpp',
             '../src/metric.cpp',
+            '../src/metric_definition_manager.cpp',
             '../src/numeric_threshold.cpp',
             '../src/on_change_threshold.cpp',
             '../src/persistent_json_storage.cpp',
