POC: MetricDefinition schema implementation
As a proof of concept MetricDefinition schema was implemented in
telemetry service which allowed to speed up GET requests on
MetricDefinitions.

Test scenario which performs:
GET /redfish/v1/TelemetryService/MetricDefinitions
GET on every @odata.id in Members collection

Test scenario executed 80% faster when implemented in telemetry service.

Tested:
  - Get requests on MetricDefinitions correct results

Signed-off-by: Krzysztof Grobelny <krzysztof.grobelny@intel.com>
Change-Id: Ic73e084ce628b9ed9f6f1129170fe388cccf5937

--- a/meson.build
+++ b/meson.build
@@ -4,7 +4,7 @@ project(
     meson_version: '>=0.54.3',
     default_options: [
         'buildtype=debugoptimized',
-        'cpp_std=c++17',
+        'cpp_std=c++20',
         # TODO: Without RTTI telemetry does not build using Boost 1.74.0
         # https://github.com/chriskohlhoff/asio/issues/533
         #'cpp_rtti=false',
@@ -80,6 +80,7 @@ executable(
         'src/discrete_threshold.cpp',
         'src/main.cpp',
         'src/metric.cpp',
+        'src/metric_definition_manager.cpp',
         'src/numeric_threshold.cpp',
         'src/on_change_threshold.cpp',
         'src/persistent_json_storage.cpp',
