--- a/meson.build
+++ b/meson.build
@@ -68,8 +68,8 @@ add_project_arguments(
         get_option('max-reading-parameters').to_string(),
     '-DTELEMETRY_MIN_INTERVAL=' + get_option('min-interval').to_string(),
     '-DTELEMETRY_MAX_TRIGGERS=' + get_option('max-triggers').to_string(),
-    '-DTELEMETRY_MAX_REPORT_NAME_LENGTH=' +
-        get_option('max-report-name-length').to_string(),
+    '-DTELEMETRY_MAX_DBUS_PATH_LENGTH=' +
+        get_option('max-dbus-path-length').to_string(),
     language: 'cpp'
 )
 
