--- a/meson_options.txt
+++ b/meson_options.txt
@@ -7,5 +7,5 @@ option('min-interval', type: 'integer', min: 1, value: 1000,
        description: 'Minimal value of interval in milliseconds')
 option('max-triggers', type: 'integer', min: 1, value: 10,
        description: 'Max number of Triggers')
-option('max-report-name-length', type: 'integer', min: 1, value: 4095,
-       description: 'Max length of Report name')
+option('max-dbus-path-length', type: 'integer', min: 1, value: 4095,
+       description: 'Max length of dbus object path')
