Add Id to Trigger
Currently, Trigger is using Name as unique identifier. By adding Id, we
can be compliant with redfish specification:
- Id will be used as unique identifier
- Name will be used as human readable, non-unique name

AddTrigger dbus method is now requiring both id and name. Each of them
can be passed as empty string and the service will fill them with
correct values. If only id is an empty string, name will be used to
generate its value.

Dbus object path and persistent storage filename are now be based on id,
instead of name.

Added validation for AddTrigger:
- max name length
- max id length

Added Name property for Trigger object, which can be modified from dbus.

Testing done:
- Unit test added and passing
- Trigger was added using dbus, without errors
- Name property is accessible and writable from dbus, its length is
  validated.

Signed-off-by: Szymon Dompke <szymon.dompke@intel.com>
Change-Id: Ibb553586eaf51943044c93a35bc0725e6ef67ce9

--- a/meson.build
+++ b/meson.build
@@ -70,6 +70,8 @@ add_project_arguments(
     '-DTELEMETRY_MAX_TRIGGERS=' + get_option('max-triggers').to_string(),
     '-DTELEMETRY_MAX_REPORT_NAME_LENGTH=' +
         get_option('max-report-name-length').to_string(),
+    '-DTELEMETRY_MAX_TRIGGER_NAME_AND_ID_LENGTH=' +
+        get_option('max-trigger-name-and-id-length').to_string(),
     language: 'cpp'
 )
 
