build: fix deprecated meson function
Fix the following meson warning:
    WARNING: Project targeting '>=0.57.0' but tried to use feature
    deprecated since '0.56.0': Dependency.get_pkgconfig_variable. use
    Dependency.get_variable(pkgconfig : ...) instead

Signed-off-by: Patrick Williams <patrick@stwcx.xyz>
Change-Id: Ifab131f5d20a88048bcf6649ab8a1ac4bfbd81d9

--- a/meson.build
+++ b/meson.build
@@ -114,7 +114,7 @@ configure_file(
         'bindir': get_option('prefix') / get_option('bindir'),
     },
     install: true,
-    install_dir: systemd.get_pkgconfig_variable('systemdsystemunitdir'),
+    install_dir: systemd.get_variable(pkgconfig: 'systemdsystemunitdir'),
 )
 
 if get_option('buildtest')
