Add length limit for user-defined values
Previously, the only limit for most user-defined values like id or name
was the one enforced by dbus, which was fairly big. In order to save
space used by persistent data, new meson options were added, with length
limit for those fields.

This directly impacts following dbus interfaces:
- TriggerManager.AddTrigger:
  - Id
  - Name
  - Reports
  - Thresholds (only name of discrete threshold)
- Trigger.Name
- Trigger.Reports
- Trigger.Thresholds (only name of discrete threshold)
- ReportManager.AddReport(FutureVersion):
  - Id
  - Name
  - MetricParameters (metricId)
- Report.Name
- Report.ReadingParameters (metricId)

For Id fields we support 'prefixes', which also are limited, but those
limit are separate. So if limit for prefix is set to 5 and limit for
id/name is set to 5, following Id is fine:
- 12345/12345
- 12345
and following are not:
- 123456/1234
- 1/123456

Both of those limits can be set to 0, so the check will be disabled.

Testing done:
- UTs are passing.
- new limits are reflected when calling mentioned dbus interfaces.

Signed-off-by: Szymon Dompke <szymon.dompke@intel.com>
Change-Id: I29291a1cc56a344d92fb65491c9186fdb90a8529

--- a/meson.build
+++ b/meson.build
@@ -64,6 +64,8 @@ add_project_arguments(
         get_option('max-dbus-path-length').to_string(),
     '-DTELEMETRY_MAX_APPEND_LIMIT=' +
         get_option('max-append-limit').to_string(),
+    '-DTELEMETRY_MAX_ID_NAME_LENGTH=' + get_option('max-id-name-length').to_string(),
+    '-DTELEMETRY_MAX_PREFIX_LENGTH=' + get_option('max-prefix-length').to_string(), 
     language: 'cpp'
 )
 
@@ -91,7 +93,7 @@ executable(
         'src/types/report_types.cpp',
         'src/utils/conversion_trigger.cpp',
         'src/utils/dbus_path_utils.cpp',
-        'src/utils/generate_id.cpp',
+        'src/utils/make_id_name.cpp',
         'src/utils/messanger_service.cpp',
     ],
     dependencies: [
