Redesigned error handling
Current error handling send only error code, which is not enough to
display detailed information. New error handling in additional to
error code send property name. This allows to send meaningful messages
back to used about errors.

Tested:
  - Old redfish code properly handles errors (reads only error_code)
  - Redfish version which read property name from error displays more
    detailed error information

Change-Id: I54caa20881ac3f3e38cb295a3aa95ddab491303f
Signed-off-by: Krzysztof Grobelny <krzysztof.grobelny@intel.com>

--- a/tests/meson.build
+++ b/tests/meson.build
@@ -25,6 +25,7 @@ test(
             '../src/sensor_cache.cpp',
             '../src/trigger.cpp',
             '../src/trigger_actions.cpp',
+            '../src/errors.cpp',
             '../src/trigger_factory.cpp',
             '../src/trigger_manager.cpp',
             '../src/types/readings.cpp',
