Update meson and subprojects
Few changes related to meson:
- GTest and boost were updated.
- Boost is now built locally in case it is not installed on system.
- Minor meson.build refactor.

Testing done:
- local build is working fine, when subprojects are not installed on the
  system,
- local build is working fine, when subprojects are installed on the
  system,
- yocto build is working fine.

Signed-off-by: Szymon Dompke <szymon.dompke@intel.com>
Change-Id: Ib62092946d6ffafb1884d1ba3eab97bed243dd12

--- a/.gitignore
+++ b/.gitignore
@@ -114,6 +114,8 @@ fabric.properties
 ### Meson ###
 # subproject directories
 /subprojects/*
+!/subprojects/packagefiles/
+!/subprojects/boost.wrap
 !/subprojects/googletest.wrap
 !/subprojects/nlohmann.wrap
 !/subprojects/phosphor-logging.wrap
