--- a/project.config
+++ b/project.config
@@ -2,3 +2,5 @@
 	inheritFrom = openbmc-no-submit
 [submit]
 	action = inherit
+[access "refs/heads/*"]
+	label-Code-Review = -2..+2 group openbmc/telemetry-owners
