meson: adjust nlohmann-json dependency
- Simplify nlohmann-json dependency in meson.build.
- Use consistent dependency variable names (based on Meson style).
- Align wrap file name with meson wrapdb choice for the project.

Signed-off-by: Patrick Williams <patrick@stwcx.xyz>
Change-Id: I2e893fd8c300b36a16d704f2002bb966a6e52ce4

--- a/.gitignore
+++ b/.gitignore
@@ -117,7 +117,7 @@ fabric.properties
 !/subprojects/packagefiles/
 !/subprojects/boost.wrap
 !/subprojects/googletest.wrap
-!/subprojects/nlohmann.wrap
+!/subprojects/nlohmann_json.wrap
 !/subprojects/phosphor-logging.wrap
 !/subprojects/sdbusplus.wrap
 
