Adjust error handling to bmcweb's preferences
Redesigned errors thrown during dbus operations to format, that can be
easily caught by existing utilities on bmcweb side. Some of these errors
could be changed to autogenerated structures from
phosphor-dbus-interfaces. InvalidArgument implementation needs to remain
custom though in order to preserve information about failed property.
Overall, this new approach gives us more verbose high-level information
at the cost of losing accuracy on lower level: error code for all of
these exceptions will be EIO.

Tested:
On platform with corresponding bmcweb change
(https://gerrit.openbmc.org/c/openbmc/bmcweb/+/74892). All errors are
caught properly and corresponding Redfish message is displayed. All unit
tests have passed.

Change-Id: If8676ae12af23707763784e2b43bdc5a4559d874
Signed-off-by: Michal Orzel <michalx.orzel@intel.com>

--- a/meson.build
+++ b/meson.build
@@ -33,6 +33,7 @@ boost = dependency('boost',
     modules: boost_modules)
 
 nlohmann_json_dep = dependency('nlohmann_json', include_type: 'system')
+phosphor_dbus_interfaces = dependency('phosphor-dbus-interfaces')
 phosphor_logging = dependency('phosphor-logging')
 sdbusplus = dependency('sdbusplus')
 systemd = dependency('systemd')
@@ -84,6 +85,7 @@ executable(
         boost,
         nlohmann_json_dep,
         sdbusplus,
+        phosphor_dbus_interfaces,
         phosphor_logging,
     ],
     include_directories: 'src',
