--- a/.gitignore
+++ b/.gitignore
@@ -118,6 +118,7 @@ fabric.properties
 !/subprojects/boost.wrap
 !/subprojects/googletest.wrap
 !/subprojects/nlohmann_json.wrap
+!/subprojects/phosphor-dbus-interfaces.wrap
 !/subprojects/phosphor-logging.wrap
 !/subprojects/sdbusplus.wrap
 
