meson: use non-deprecated systemd packageconfig
Systemd's packageconfig file has both `systemdsystemunitdir` and
`systemd_system_unit_dir` defined.  The non-underscore one appears
to be a deprecated alias[1].  Move to the non-deprecated /
underscore-separated variant.

[1]: https://github.com/systemd/systemd/commit/4908de44b0a0409f84a7cdc5641b114d6ce8ba03

Change-Id: I4cf46ac6aea46dcbbacc439bc2a1dc90cffb32d4
Signed-off-by: Patrick Williams <patrick@stwcx.xyz>

--- a/meson.build
+++ b/meson.build
@@ -115,7 +115,7 @@ configure_file(
         'after': service_after,
     },
     install: true,
-    install_dir: systemd.get_variable('systemdsystemunitdir'),
+    install_dir: systemd.get_variable('systemd_system_unit_dir'),
 )
 
 if get_option('buildtest')
