Review access change
Change-Id: Iac9704a58dcb1bf834420582f9a1cb305234c44c

--- a/project.config
+++ b/project.config
@@ -4,3 +4,4 @@
 	action = inherit
 [access "refs/heads/*"]
 	label-Code-Review = -2..+2 group openbmc/telemetry-owners
+	label-Code-Review = -1..+1 group Registered Users
