Review access change
Signed-off-by: Jason M. Bills <jason.m.bills@linux.intel.com>
Change-Id: I98e094e0165ec87cbf8b6eb95b8ce7222296299c

--- a/project.config
+++ b/project.config
@@ -1,6 +1,4 @@
 [access]
-	inheritFrom = openbmc-no-submit
+	inheritFrom = openbmc-all-repos
 [submit]
-	action = inherit
-[access "refs/heads/*"]
-	label-Code-Review = -2..+2 group openbmc/telemetry-owners
+	action = rebase if necessary
